Fix blog article alignment.

--- a/sources/stylesheets/content/_text.scss
+++ b/sources/stylesheets/content/_text.scss
@@ -143,8 +143,13 @@
 
     &.article-title {
       font-style: normal;
-      text-align: left;
       text-decoration: none;
+
+      // scss-lint:disable NestingDepth
+      .blog-article-page & {
+        text-align: center;
+      }
+      // scss-lint:enable NestingDepth
     }
   }
 
